--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,7 +92,7 @@ a {
   padding-left: 5em;
   padding-right: 5em;
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
   align-items: center;
   color: #fff;
   font-size: 1.1em;
@@ -114,28 +114,33 @@ a {
   flex: 1;
 }
 
-
-
-
-/* ---------------------------------------- */
-
-
-.otobus-div {
-  margin: 25px 0px;
-  display: table-cell;
+.sub-header-item.active {
+  background-color: #FD0F00;
+  color: #fff !important;
+  border: #FD0F00 !important;
 }
 
-.koltuk-sira {
-  padding: 0;
+.sub-header-item:hover {
+  background-color: #FD0F00;
+  color: #fff !important;
+  border: #FD0F00 !important;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+.content {
   display: flex;
+  align-items: center;
 }
 
-.koltuk {
-  border: 1px solid black;
-  margin-bottom: 5px;
-  height: 57px;
-  text-align: center;
-  line-height: 57px;
-  font-size: 18px;
-  font-weight: 600;
+.content::after {
+  background-color: #e1e1e1;
+  content: "";
+  height: 1px;
+  width: 100%;
+  left: 1em;
+  position: relative;
 }
